--- a/src/leaneating.html
+++ b/src/leaneating.html
@@ -5,7 +5,6 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="css/styles.css">
-  <link rel="stylesheet" href="css/leaneating.css">
   <script src="https://kit.fontawesome.com/f45d831e1a.js" crossorigin="anonymous"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Delius+Swash+Caps&display=swap" rel="stylesheet">
@@ -38,129 +37,135 @@
       </div>
     </div>
   </navbar>
-    <section>
-      <br>
-      <br>
-      <br>
+  <section>
+    <br>
+    <br>
+    <br>
     <div class="LeanEating">
-    <h1>8 New Rules of Lean Eating</h1>
-    <div class="intro">
-    <p>You'd like your eating plan to work for you - to get you the results that you want without loads of complicated steps. 
-        The good news is that lean eating does not mean complicated eating...it just means eating smart!</p>
+      <h1>8 New Rules of Lean Eating</h1>
+      <div class="intro">
+        <p>You'd like your eating plan to work for you - to get you the results that you want without loads of complicated steps.
+          The good news is that lean eating does not mean complicated eating...it just means eating smart!</p>
       </div>
-        <br>
-    <div class="rule_1">
-    <h4>1. Eat the RIGHT Type of Carbs</h4>
-    <img src="Images/fruitveg.jpg" alt="green fruit and veg" width="400" height="480" class="rule_1_img">
-    <p>
-    There is a confusion around which carbs have a place in a lean diet and which carbs will only make you gain weight.
-    The success of your eating plan depends a lot on which of these carbs you regularly include in your diet:
-    <ol>
-        <li>Green vegetables</li>
-        <li>Non-Green veggies - You gotta get your carrots in too!</li>
-        <li>Fruit</li>
-        <li>Whole Grains and Starches</li>
-        <li>Refined Grains</li>
-        <li>Foods with Added Sugar</li>
-    </ol>
-    The top 3 ranked carbs are where 90% of the carbs in your diet should be coming from...in order to get that lean physique that you want.
-    Immediately cut out the bottom 2 (refined grains and foods with added sugar) and on occasion include a limited amount of Whole Grains and Starches.
-    </div>
-    <br>
-    <div class="rule_2">
+      <br>
+      <div class="rule_1">
+        <h4>1. Eat the RIGHT Type of Carbs</h4>
+        <img src="Images/fruitveg.jpg" alt="green fruit and veg" width="400" height="480" class="rule_1_img">
+        <p>
+          There is a confusion around which carbs have a place in a lean diet and which carbs will only make you gain weight.
+          The success of your eating plan depends a lot on which of these carbs you regularly include in your diet:
+          <ol>
+            <li>Green vegetables</li>
+            <li>Non-Green veggies - You gotta get your carrots in too!</li>
+            <li>Fruit</li>
+            <li>Whole Grains and Starches</li>
+            <li>Refined Grains</li>
+            <li>Foods with Added Sugar</li>
+          </ol>
+          The top 3 ranked carbs are where 90% of the carbs in your diet should be coming from...in order to get that lean physique that you want.
+          Immediately cut out the bottom 2 (refined grains and foods with added sugar) and on occasion include a limited amount of Whole Grains and Starches.
+      </div>
+      <br>
+      <div class="rule_2">
         <img src="Images/fitnesstracker.jpg" alt="smartwatch" width="400" height="250" class="trackimage">
-    <h4>2. Track What You Eat</h4>
-    <p>The only way to improve upon your diet is to actually know what you're currently eating. Keep a food journal, or download a free food tracker app(my fitness pal),
-        and track the calories that you have over the course of a week. This will give you a broad look at where your low quality calories are coming from (high sugar, empty calories). 
-        Your first step will be to eliminate these fattening calories and to start replacing empty calories with nutrient-filled whole foods. 
-    </p>
-    </div>
-    <div class="rule_3">
-    <h4>3. Space Meals Apart</h4>
-    <p>Much has been said over the past number of decades about the importance of eating small frequent meals throughout the day. This is old, outdated science.
-        New research has proven that there's more harm than good to eating more frequently than every 4 hours. Stick with 3 meals each day, and fill in a protein-based 
-        snack if your meals are going to be more than 4 hours apart.
-    </p>
-  </div>
-  <div class="rule_4">
-      <img src="Images/baddiet.jpg" alt="poor diet" width="400" height="240" class="plateimage">
-    <h4>4. Never Restrict Calories to the Extreme</h4>
-      <p>There's a certain trend going on in temporarily restricting calories to the extreme. The idea that one can drop a down a size or two in just as many weeks is quite tempting.
-       I hate to be the one to burst your overambitious bubble, but extreme calorie restriction NEVER WORKS. It's terrible for your body and it is not something that is sustainable
-       (namely because you'd starve to death) all this will do is make your body completely fall off and binge. 
-       <br>
-       The key to being lean for life is to eat in a way that you can sustain forever. Eat whole foods. Eat a moderate amount of the RIGHT calories. Every day, ongoing, forever. 
-    </p>
-  </div>
-  <div class="rule_5">
-    <br>
-    <img src="Images/veggiesfirst.jpg" alt="vegetables" width="480" height="320" class="veggiesfirst">
-    <h4>5. Eat Veggies First</h4>
-    <p>This may go against all of your instincts, but hear this one out. When you sit down to a meal first eat all of the veggies and salad, before moving on to the main meal. 
-        This simple strategy helps to fill you up with lower calorie foods first, before moving on to the higher calorie items. By making this a habit you'll naturally and effortlessly consume fewer
-        calories at each meal, which will add up in a big way.
-    </p>
-  </div>
-  <div class="rule_6">
-    <br>
-    <img src="Images/proteinimage.jpg" alt="protein" width="350" height="280" class="proteinimage">
-    <h4>6. Include Protein at Every Meal</h4>
-    <p>Each of your meals should be built around a healthy serving of protein. This protein could be meat (chicken breast, fish fillet, roasted turkey, lean beef etc..), or a meat substitute
-        (tofu, quorn, jackfruit, etc..) eggs, or protein powder. Having protein as the focus point of your meal is important for two reasons:
-    <ol>
-        <li>You're fueling up in a way that builds muscles rather than stores fat</li>
-        <li>By default, you're avoiding high calorie main dishes, which is what really causes most weight gain</li>
-    </ol></p>
-  </div>
-  <div class="rule_7">
-    <br>
-    <img src="Images/nofizzies.jpg" alt="Fizzy Drink" width="250" height="220" class="nofizzies">
-    <h4>7. Ban Liquid Calories</h4>
-    <p>Liquid calories have no place in a lean eating plan. No place at all. Anytime that you are drinking calories, it's safe to assume that you're adding inches to your waistline.
-        Put down the beer, just say no to the blended coffee drink, and forget about fizzy drinks. Put down the beer, just say no to the blended coffee drink, and forget about fizzy drinks.
-    </p>
-  </div>
-  <div class="rule_8">
-    <br>
-    <h4>8. Avoid Prepackaged Foods</h4>
-    <p>Prepackaged foods and snacks have no place in a lean eating plan. These processed foods contain numerous fattening ingredients such as refined sugar, sodium, 
-        grains, fillers and other artificial ingredients. If you are currently eating packaged foods on a daily basis, then cutting these items out will quickly translate into pounds lost. </p>
+        <h4>2. Track What You Eat</h4>
+        <p>The only way to improve upon your diet is to actually know what you're currently eating. Keep a food journal, or download a free food tracker app(my fitness pal),
+          and track the calories that you have over the course of a week. This will give you a broad look at where your low quality calories are coming from (high sugar, empty calories).
+          Your first step will be to eliminate these fattening calories and to start replacing empty calories with nutrient-filled whole foods.
+        </p>
+      </div>
+      <div class="rule_3">
+        <h4>3. Space Meals Apart</h4>
+        <p>Much has been said over the past number of decades about the importance of eating small frequent meals throughout the day. This is old, outdated science.
+          New research has proven that there's more harm than good to eating more frequently than every 4 hours. Stick with 3 meals each day, and fill in a protein-based
+          snack if your meals are going to be more than 4 hours apart.
+        </p>
+      </div>
+      <div class="rule_4">
+        <img src="Images/baddiet.jpg" alt="poor diet" width="400" height="240" class="plateimage">
+        <h4>4. Never Restrict Calories to the Extreme</h4>
+        <p>There's a certain trend going on in temporarily restricting calories to the extreme. The idea that one can drop a down a size or two in just as many weeks is quite tempting.
+          I hate to be the one to burst your overambitious bubble, but extreme calorie restriction NEVER WORKS. It's terrible for your body and it is not something that is sustainable
+          (namely because you'd starve to death) all this will do is make your body completely fall off and binge.
+          <br>
+          The key to being lean for life is to eat in a way that you can sustain forever. Eat whole foods. Eat a moderate amount of the RIGHT calories. Every day, ongoing, forever.
+        </p>
+      </div>
+      <div class="rule_5">
+        <br>
+        <img src="Images/veggiesfirst.jpg" alt="vegetables" width="480" height="320" class="veggiesfirst">
+        <h4>5. Eat Veggies First</h4>
+        <p>This may go against all of your instincts, but hear this one out. When you sit down to a meal first eat all of the veggies and salad, before moving on to the main meal.
+          This simple strategy helps to fill you up with lower calorie foods first, before moving on to the higher calorie items. By making this a habit you'll naturally and effortlessly consume fewer
+          calories at each meal, which will add up in a big way.
+        </p>
+      </div>
+      <div class="rule_6">
+        <br>
+        <img src="Images/proteinimage.jpg" alt="protein" width="350" height="280" class="proteinimage">
+        <h4>6. Include Protein at Every Meal</h4>
+        <p>Each of your meals should be built around a healthy serving of protein. This protein could be meat (chicken breast, fish fillet, roasted turkey, lean beef etc..), or a meat substitute
+          (tofu, quorn, jackfruit, etc..) eggs, or protein powder. Having protein as the focus point of your meal is important for two reasons:
+          <ol>
+            <li>You're fueling up in a way that builds muscles rather than stores fat</li>
+            <li>By default, you're avoiding high calorie main dishes, which is what really causes most weight gain</li>
+          </ol>
+        </p>
+      </div>
+      <div class="rule_7">
+        <br>
+        <img src="Images/nofizzies.jpg" alt="Fizzy Drink" width="250" height="220" class="nofizzies">
+        <h4>7. Ban Liquid Calories</h4>
+        <p>Liquid calories have no place in a lean eating plan. No place at all. Anytime that you are drinking calories, it's safe to assume that you're adding inches to your waistline.
+          Put down the beer, just say no to the blended coffee drink, and forget about fizzy drinks. Put down the beer, just say no to the blended coffee drink, and forget about fizzy drinks.
+        </p>
+      </div>
+      <div class="rule_8">
+        <br>
+        <h4>8. Avoid Prepackaged Foods</h4>
+        <p>Prepackaged foods and snacks have no place in a lean eating plan. These processed foods contain numerous fattening ingredients such as refined sugar, sodium,
+          grains, fillers and other artificial ingredients. If you are currently eating packaged foods on a daily basis, then cutting these items out will quickly translate into pounds lost. </p>
       </div>
       <div class="author">
         <p>Alex Ardelean - PT</p>
       </div>
-    </section>
-    <footer>
-        <footer class="footer">
-            <div class="container footer__container">
-              <div class="row">
-                <div class="col-12 col-3-md">
-                  <a href="#home" class="footer__logo">LOGO</a>
-                </div>
-                <div class="col-12 col-3-md">
-                  <div class="footer__list">
-                    <a href="#recipes" class="footer__link">Recipes</a>
-                    <a href="#blog" class="footer__link">Blog</a>
-                    <a href="#calculator" class="footer__link">Calculator</a>
-                  </div>
-                </div>
-                <div class="col-12 col-3-md">
-                  <div class="footer__list">
-                    <a href="#about" class="footer__link">About</a>
-                    <a href="#lifestyle" class="footer__link">Lifestyle</a>
-                    <a href="#contact" class="footer__link">Contact</a>
-                  </div>
-                </div>
-                <div class="col-12 col-3-md">
-                  <div class="footer__contact-wrapper">
-                    <div class="footer__social-media">
-                      <i class="fab fa-facebook-f"></i>
-                      <i class="fab fa-twitter"></i>
-                      <i class="fab fa-pinterest-p"></i>
-                    </div>
-                    <div class="footer__contact">
-                      <p>5 Fitzgerald Street, Harold's Cross,</p>
-                      <p>Dublin 6, D08X65 </p>
+  </section>
+  <footer class="footer">
+    <div class="container footer__container">
+      <div class="row">
+        <div class="col-12 col-3-md">
+          <a href="#home" class="footer__logo">LOGO</a>
+        </div>
+        <div class="col-12 col-3-md">
+          <div class="footer__list">
+            <a href="#recipes" class="footer__link">Recipes</a>
+            <a href="#blog" class="footer__link">Blog</a>
+            <a href="#calculator" class="footer__link">Calculator</a>
+          </div>
+        </div>
+        <div class="col-12 col-3-md">
+          <div class="footer__list">
+            <a href="#about" class="footer__link">About</a>
+            <a href="#lifestyle" class="footer__link">Lifestyle</a>
+            <a href="#contact" class="footer__link">Contact</a>
+          </div>
+        </div>
+        <div class="col-12 col-3-md">
+          <div class="footer__contact-wrapper">
+            <div class="footer__social-media">
+              <i class="fab fa-facebook-f"></i>
+              <i class="fab fa-twitter"></i>
+              <i class="fab fa-pinterest-p"></i>
             </div>
-        </body>
-      </html>
+            <div class="footer__contact">
+              <p>5 Fitzgerald Street, Harold's Cross,</p>
+              <p>Dublin 6, D08X65 </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
+</body>
+
+</html>
