--- a/src/lifestyle.html
+++ b/src/lifestyle.html
@@ -37,8 +37,8 @@
       </div>
     </div>
   </navbar>
-<br>
-<br>
+  <br>
+  <br>
   <section>
     <h1>Lifestyle</h1>
     <div class="container">
@@ -47,21 +47,23 @@
           <a href="staples.html"> <img src="images\kitchen.jpg" alt="Kitchen" height="200" width="280"></a>
           <h3 class="blog__title">Kitchen Staples</h3>
           <p class="">No matter who you are, or what you eat, there are certain items you just have to have in your kitchen to help make sticking
-            to your chosen diet that little bit easier! <a href ="staples.html"> Click here</a> to find out just what you need!
+            to your chosen diet that little bit easier! <a href="staples.html"> Click here</a> to find out just what you need!
           </p>
         </div>
 
         <div class="col-12 col-3-xl">
           <a href="mythsbusted.html"> <img src="images\fatloss.jpg" alt="Training" height="200" width="280"></a>
           <h3>Myths Busted - Fatloss Edition!</h3>
-          <p class="blog__text_Myths_Busted">We've heard all the myths there are, "carbs make you fat", "eating at night is bad for you", "you can't get enough protein to build muscle if you're vegan", "blah, blah, blah" 
-            But you can't believe everything you hear, especially when it comes to health and fitness. There is no "one size fits all". With that in mind, 
+          <p class="blog__text_Myths_Busted">We've heard all the myths there are, "carbs make you fat", "eating at night is bad for you", "you can't get enough protein to build muscle if you're vegan", "blah, blah, blah"
+            But you can't believe everything you hear, especially when it comes to health and fitness. There is no "one size fits all". With that in mind,
             lets bust two of what I consider to be the craziest of myths out there! <a href="mythsbusted.html"> Click Here</a>
           </p>
         </div>
 
         <div class="col-12 col-3-xl">
-          <a href="leaneating.html"> <img src="images\prep.jpg" alt="Lean Eating" hegiht="200" width="280"></a>
+          <a href="leaneating.html">
+            <img src="images\prep.jpg" alt="Lean Eating" hegiht="200" width="280">
+          </a>
           <h3>Lean Eating</h3>
           <p class="blog__text_Lean_Eating">One of the most difficult things to do when trying to stick to a diet / lose weight / build muscle is lean eating!
             But there are things you can do to make this easier! <a href="leaneating.html"> Click here</a> to view 8 simple tips for lean eating.
@@ -73,13 +75,14 @@
             <img src="images\beachbod.jpg" alt="Lean Eating" height="200" width="280">
           </a>
           <h3>Beach Bod Basics</h3>
-          <p class="blog__text_Beach_Bod">We're all here because we're trying to do our best for our bodies, but for those of you who are trying to 
+          <p class="blog__text_Beach_Bod">We're all here because we're trying to do our best for our bodies, but for those of you who are trying to
             create works of art out of yours, <a href="beachbod.html">click here</a> for three helpful hints on how to achieve this!
           </p>
         </div>
       </div>
     </div>
   </section>
+
   <footer class="footer">
     <div class="container footer__container">
       <div class="row">
