--- a/src/mythsbusted.html
+++ b/src/mythsbusted.html
@@ -5,7 +5,6 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="css/styles.css">
-  <link rel="stylesheet" href="css/mythsbusted.css">
   <script src="mythsbusted.js"></script>
   <script src="https://kit.fontawesome.com/f45d831e1a.js" crossorigin="anonymous"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -39,102 +38,111 @@
       </div>
     </div>
   </navbar>
-    <section>
-      <br>
-      <br>
-      <br>
-    <section>
-    <div class="MythsBusted">
-    <h1>Myths Busted - Fatloss Edition!</h1>
 
-    <div class="mySlides fade">
+  <section>
+    <br>
+    <br>
+    <br>
+    <div class="MythsBusted">
+      <h1>Myths Busted - Fatloss Edition!</h1>
+
+      <div class="mySlides fade">
         <div class="numbertext">1/2</div>
         <img src="images\myth1.jpg" alt="Fitness" width="100%" height="auto">
-
       </div>
 
       <div class="mySlides fade">
-      <div class="numbertext">2/2</div>
-      <img src="images\myth2.jpg" alt="Fitness" width="100%" height="auto">
+        <div class="numbertext">2/2</div>
+        <img src="images\myth2.jpg" alt="Fitness" width="100%" height="auto">
+      </div>
+      <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+      <a class="next" onclick="plusSlides(1)">&#10095;</a>
     </div>
-    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-    <a class="next" onclick="plusSlides(1)">&#10095;</a>
-  </div>
-<br>
-<div style="text-align:center">
-    <span class="dot" onclick="currentSlide(1)"></span>
-    <span class="dot" onclick="currentSlide(2)"></span>
-</div>
+
+    <br>
+    <div style="text-align:center">
+      <span class="dot" onclick="currentSlide(1)"></span>
+      <span class="dot" onclick="currentSlide(2)"></span>
+    </div>
+
     <div class="myth1">
-    <h3>Myth #1: Light Weight & High Reps Are Best For Fat Loss</h3>
-    <p>Much of the time, one of the first steps many people take when attempting to lose weight is to begin working out, which is great! 
-    But very often, this workout includes lifting a high amount of lightweight repetitions to burn fat.
-    Unfortunately, that’s not always the best route to take, especially if you’re hoping to maintain muscle and strength. 
-    The body is quite interesting in that it grows when it needs to and then stops when it doesn’t. In the case of muscle while dieting, this could not be any more true.
-    <br>
-    When you’re dieting, the body adapts by reducing your bodyweight, which of course needs to come from somewhere.While most of us hope this weight comes from body fat, 
-    it doesn’t always pan out that way. When you diet and begin to lose weight, one of the first places that weight comes from is muscle. 
-    Muscle is energy-costly to maintain, which means in times when calories are restricted, the body switches to survival mode rather than beast mode 
-    (it doesn't care how defined your glutes are in this moment!).This is, of course, unless you provide the body with a reason to maintain your muscle.
-    Rather than using your resistance training workouts to burn calories, I suggest allowing your calorie deficit to come from food.Then when you train, 
-    consider using many different weight and rep ranges for a wide range of effect.
-    <br>
-    Surely you can incorporate higher repetition sessions in, but overall you still should be doing heavier lifting.Surely you can incorporate higher repetition sessions in, 
-    but overall you still should be doing heavier lifting. By doing so, you’ll give your body a reason to keep muscle rather than burning it off the first time you reduce calories.
-    <br>
-    I suggest providing each workout with a specific purpose, using multiple rep ranges, with some high and some low, for a combination of strength-based training 
-    as well as the more metabolically demanding workouts.
-  </div>
-    </p>
+      <h3>Myth #1: Light Weight & High Reps Are Best For Fat Loss</h3>
+      <p>Much of the time, one of the first steps many people take when attempting to lose weight is to begin working out, which is great!
+        But very often, this workout includes lifting a high amount of lightweight repetitions to burn fat.
+        Unfortunately, that’s not always the best route to take, especially if you’re hoping to maintain muscle and strength.
+        The body is quite interesting in that it grows when it needs to and then stops when it doesn’t. In the case of muscle while dieting, this could not be any more true.
+        <br>
+        When you’re dieting, the body adapts by reducing your bodyweight, which of course needs to come from somewhere.While most of us hope this weight comes from body fat,
+        it doesn’t always pan out that way. When you diet and begin to lose weight, one of the first places that weight comes from is muscle.
+        Muscle is energy-costly to maintain, which means in times when calories are restricted, the body switches to survival mode rather than beast mode
+        (it doesn't care how defined your glutes are in this moment!).This is, of course, unless you provide the body with a reason to maintain your muscle.
+        Rather than using your resistance training workouts to burn calories, I suggest allowing your calorie deficit to come from food.Then when you train,
+        consider using many different weight and rep ranges for a wide range of effect.
+        <br>
+        Surely you can incorporate higher repetition sessions in, but overall you still should be doing heavier lifting.Surely you can incorporate higher repetition sessions in,
+        but overall you still should be doing heavier lifting. By doing so, you’ll give your body a reason to keep muscle rather than burning it off the first time you reduce calories.
+        <br>
+        I suggest providing each workout with a specific purpose, using multiple rep ranges, with some high and some low, for a combination of strength-based training
+        as well as the more metabolically demanding workouts.
+      </p>
+    </div>
     <br>
     <div class="myth2">
-    <h3>Myth #2: You Need Lots Of Cardio For Weight Loss</h3>
-    <p>
-    If high rep workouts are often the first step of many, then jumping on the treadmill to get some cardio in is the second. While cardio does provide advantages for burning fat, 
-    many people have a misconception about what that actually means. Studies show that even though during your workout you may see an increase of calorie burn specifically from fat,
-    the body actually reduces energy expenditure later on in the day to compensate. In essence, the body does what it can to reduce the impact of your calorie deficit.
-    One of those mechanisms is to reduce calorie expenditure at other times of the day, in effect rendering the cardio almost worthless.
+      <h3>Myth #2: You Need Lots Of Cardio For Weight Loss</h3>
+      <p>
+        If high rep workouts are often the first step of many, then jumping on the treadmill to get some cardio in is the second. While cardio does provide advantages for burning fat,
+        many people have a misconception about what that actually means. Studies show that even though during your workout you may see an increase of calorie burn specifically from fat,
+        the body actually reduces energy expenditure later on in the day to compensate. In essence, the body does what it can to reduce the impact of your calorie deficit.
+        One of those mechanisms is to reduce calorie expenditure at other times of the day, in effect rendering the cardio almost worthless.
+        <br>
+        Additionally, this myth goes even a bit further in that exercise itself isn’t really a requirement for weight loss.You could easily reduce the same amount of calories
+        that you’re burning from the cardio from your diet, then weight loss will still occur .Rather than spending hours on the treadmill, I suggest sticking with resistance training
+        while reducing calories through your food. Then, once weight loss plateaus, you can incorporate cardio into your routine if you desire.
+      </p>
+    </div>
+
     <br>
-    Additionally, this myth goes even a bit further in that exercise itself isn’t really a requirement for weight loss.You could easily reduce the same amount of calories 
-    that you’re burning from the cardio from your diet,  then weight loss will still occur .Rather than spending hours on the treadmill, I suggest sticking with resistance training 
-    while reducing calories through your food. Then, once weight loss plateaus, you can incorporate cardio into your routine if you desire.
-    </p>
-  </div>
-    <br>
-    <div class="author"><p>Alex Ardelean - PT</p></div>
-    </section>
-  </div>
-    <footer>
-        <footer class="footer">
-            <div class="container footer__container">
-              <div class="row">
-                <div class="col-12 col-3-md">
-                  <a href="#home" class="footer__logo">LOGO</a>
-                </div>
-                <div class="col-12 col-3-md">
-                  <div class="footer__list">
-                    <a href="#recipes" class="footer__link">Recipes</a>
-                    <a href="#blog" class="footer__link">Blog</a>
-                    <a href="#calculator" class="footer__link">Calculator</a>
-                  </div>
-                </div>
-                <div class="col-12 col-3-md">
-                  <div class="footer__list">
-                    <a href="#about" class="footer__link">About</a>
-                    <a href="#lifestyle" class="footer__link">Lifestyle</a>
-                    <a href="#contact" class="footer__link">Contact</a>
-                  </div>
-                </div>
-                <div class="col-12 col-3-md">
-                  <div class="footer__contact-wrapper">
-                    <div class="footer__social-media">
-                      <i class="fab fa-facebook-f"></i>
-                      <i class="fab fa-twitter"></i>
-                      <i class="fab fa-pinterest-p"></i>
-                    </div>
-                    <div class="footer__contact">
-                      <p>5 Fitzgerald Street, Harold's Cross,</p>
-                      <p>Dublin 6, D08X65 </p>
-        </body>
-      </html>
-      
+    <div class="author">
+      <p>Alex Ardelean - PT</p>
+    </div>
+  </section>
+
+  <footer class="footer">
+    <div class="container footer__container">
+      <div class="row">
+        <div class="col-12 col-3-md">
+          <a href="#home" class="footer__logo">LOGO</a>
+        </div>
+        <div class="col-12 col-3-md">
+          <div class="footer__list">
+            <a href="#recipes" class="footer__link">Recipes</a>
+            <a href="#blog" class="footer__link">Blog</a>
+            <a href="#calculator" class="footer__link">Calculator</a>
+          </div>
+        </div>
+        <div class="col-12 col-3-md">
+          <div class="footer__list">
+            <a href="#about" class="footer__link">About</a>
+            <a href="#lifestyle" class="footer__link">Lifestyle</a>
+            <a href="#contact" class="footer__link">Contact</a>
+          </div>
+        </div>
+        <div class="col-12 col-3-md">
+          <div class="footer__contact-wrapper">
+            <div class="footer__social-media">
+              <i class="fab fa-facebook-f"></i>
+              <i class="fab fa-twitter"></i>
+              <i class="fab fa-pinterest-p"></i>
+            </div>
+            <div class="footer__contact">
+              <p>5 Fitzgerald Street, Harold's Cross,</p>
+              <p>Dublin 6, D08X65 </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
+</body>
+
+</html>
