--- a/src/staples.html
+++ b/src/staples.html
@@ -5,11 +5,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="css/styles.css">
-  <link rel="stylesheet" href="css/staples.css">
   <script src="https://kit.fontawesome.com/f45d831e1a.js" crossorigin="anonymous"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <link href="https://fonts.googleapis.com/css?family=Delius+Swash+Caps&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Rock+Salt&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Karla:400,400i,700,700i&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Prompt:400,400i,500,500i,700,700i&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/animated-icons/icons/stop/stop.json">
@@ -38,106 +35,118 @@
       </div>
     </div>
   </navbar>
-  <br>
-  <br>
-  <br>
-    <section>
-        <h1>Kitchen Staples</h1>
-    <div class="KitchenStaples">
-        <p>Right now, there is more awareness than ever before around health and fitness. People have become more educated on the dangers of unhealthy eating and poor fitness levels. 
-        With that, people have taken action to take better care of themselves. <br>
-        A huge part of this is understanding the foods you need to nourish your body to help it function to its full capacity. 
-        Everyone is so different, so there are endless possibilities out there for meals and snacks. That being said, whether you're a veggie, 
-        vegan or keto-warrior, there are certain staples that are must-haves in the kitchen to make it all that little bit easier: </p>
-        </div><br>
-        <div class="PantryStaples">
-        <p><h3>Pantry Staples</h3>
-        <img src="images\pantry.jpg" alt="Pantry" height="480" width="400" class="pantryimage">
-        <ul>
-            <li>Oil - I generally like Olive Oil or Sunflower Oil!</li>
-            <li>Spices - Everyone should have at least the following:</li>
-            <ol>
-                <li>Salt and Pepper of course!</li>
-                <li>Chilli Powder</li>
-                <li>Tumeric</li>
-                <li>Paprika</li>
-                <li>Cajun Spice</li>
-                <li>Chilli Flakes</li>
-                <li>Curry Powder</li>
-                <li>Oregano</li>
-                <li>Parsley</li>
-                <li>Rosemary</li>
-                <li>Thyme</li>
-            </ol>
-            <li>Rice</li>
-            <li>Pasta</li>
-            <li>Tinned Tomatoes</li>
-            <li>Pasata</li>
-            <li>Tomato Puree</li>
-            <li>Soy Sauce</li>
-            <li>Stock (chicken or vegetable)</li>
+  <br><br><br>
+
+  <section class="staples">
+    <div class="container">
+
+      <div class="textBox">
+        <h1 class="textBox__title">Kitchen Staples</h1>
+        <p>Right now, there is more awareness than ever before around health and fitness. People have become more educated on the dangers of unhealthy eating and poor fitness levels.
+          With that, people have taken action to take better care of themselves. <br>
+          A huge part of this is understanding the foods you need to nourish your body to help it function to its full capacity.
+          Everyone is so different, so there are endless possibilities out there for meals and snacks. That being said, whether you're a veggie,
+          vegan or keto-warrior, there are certain staples that are must-haves in the kitchen to make it all that little bit easier: </p>
+      </div>
+
+      <div class="pantry clearfix">
+        <h3 class="pantry__title">Pantry Staples</h3>
+        <img class="pantry__img pantry__img--right" src="images\pantry.jpg" alt="Pantry" class="pantryimage">
+        <ul class="pantry__text pantry__text--left">
+          <li>Oil - I generally like Olive Oil or Sunflower Oil!</li>
+          <li>Spices - Everyone should have at least the following:</li>
+          <ol>
+            <li>Salt and Pepper of course!</li>
+            <li>Chilli Powder</li>
+            <li>Tumeric</li>
+            <li>Paprika</li>
+            <li>Cajun Spice</li>
+            <li>Chilli Flakes</li>
+            <li>Curry Powder</li>
+            <li>Oregano</li>
+            <li>Parsley</li>
+            <li>Rosemary</li>
+            <li>Thyme</li>
+          </ol>
+          <li>Rice</li>
+          <li>Pasta</li>
+          <li>Tinned Tomatoes</li>
+          <li>Pasata</li>
+          <li>Tomato Puree</li>
+          <li>Soy Sauce</li>
+          <li>Stock (chicken or vegetable)</li>
         </ul>
-        </div>
-        <div class="FreshProduce">
-            <h3>Fresh Produce</h3>
-            <img src="images\garlic.jpg" alt="Garlic" height="280" width="300" class="garlicimage">
-        <ul>
-            <li>Of course at the top of this list is: <strong>Garlic!</strong></li>
-            <li>Onions (to cook with your garlic)</li>
-            <li>Fresh veggies - I like carrots and peppers, but to each their own!</li>
+      </div>
+
+      <div class="pantry clearfix">
+        <h3 class="pantry__title">Fresh Produce</h3>
+        <img class="pantry__img pantry__img--left" src="images\garlic.jpg" alt="Garlic" class="garlicimage">
+        <ul class="pantry__text pantry__text--right">
+          <li>Of course at the top of this list is: <strong>Garlic!</strong></li>
+          <li>Onions (to cook with your garlic)</li>
+          <li>Fresh veggies - I like carrots and peppers, but to each their own!</li>
         </ul>
+      </div>
+
+      <div class="pantry clearfix">
+        <h3 class="pantry__title">Gadgets</h3>
+        <img class="pantry__img pantry__img--right" src="images\kitchenware.jpg" alt="kitchenware" class="kitchenware">
+        <ul class="pantry__text pantry__text--left">
+          <li>First and foremost: <strong>A non-stick pan!</strong></li>
+          <li>Heat resistant spatula</li>
+          <li>Measuring cups and spoons</li>
+          <li>Good quality knives</li>
+          <li>Chopping board</li>
+          <li>Tin opener</li>
+          <li>Garlic press</li>
+          <li>Cheese grater</li>
+          <li>Vegetable Peeler</li>
+          <li>Weighing scales</li>
+          <li>A great caserole dish</li>
+        </ul>
+      </div>
+      <div class="staples__conclusion">
+        <h4>And there you have it folks, now that you've kitted out your kitchen, you're ready to get yourself cookin!</h4>
+      </div>
+    </div>
+  </section>
+
+  <footer class="footer">
+    <div class="container footer__container">
+      <div class="row">
+        <div class="col-12 col-3-md">
+          <a href="#home" class="footer__logo">LOGO</a>
         </div>
-        <div class="Gadgets">
-        <h3>Gadgets</h3>
-        <img src="images\kitchenware.jpg" alt="kitchenware" height="320" width="250" class="kitchenware">
-        <ul>
-            <li>First and foremost: <strong>A non-stick pan!</strong></li>
-            <li>Heat resistant spatula</li>
-            <li>Measuring cups and spoons</li>
-            <li>Good quality knives</li>
-            <li>Chopping board</li>
-            <li>Tin opener</li>
-            <li>Garlic press</li>
-            <li>Cheese grater</li>
-            <li>Vegetable Peeler</li>
-            <li>Weighing scales</li>
-            <li>A great caserole dish</li>
+        <div class="col-12 col-3-md">
+          <div class="footer__list">
+            <a href="#recipes" class="footer__link">Recipes</a>
+            <a href="#blog" class="footer__link">Blog</a>
+            <a href="#calculator" class="footer__link">Calculator</a>
           </div>
-        </ul>
-    </p>
-    <div class="end">
-    <h4>And there you have it folks, now that you've kitted out your kitchen, you're ready to get yourself cookin!</h4></div>
-    <footer>
-        <footer class="footer">
-            <div class="container footer__container">
-              <div class="row">
-                <div class="col-12 col-3-md">
-                  <a href="#home" class="footer__logo">LOGO</a>
-                </div>
-                <div class="col-12 col-3-md">
-                  <div class="footer__list">
-                    <a href="#recipes" class="footer__link">Recipes</a>
-                    <a href="#blog" class="footer__link">Blog</a>
-                    <a href="#calculator" class="footer__link">Calculator</a>
-                  </div>
-                </div>
-                <div class="col-12 col-3-md">
-                  <div class="footer__list">
-                    <a href="#about" class="footer__link">About</a>
-                    <a href="#lifestyle" class="footer__link">Lifestyle</a>
-                    <a href="#contact" class="footer__link">Contact</a>
-                  </div>
-                </div>
-                <div class="col-12 col-3-md">
-                  <div class="footer__contact-wrapper">
-                    <div class="footer__social-media">
-                      <i class="fab fa-facebook-f"></i>
-                      <i class="fab fa-twitter"></i>
-                      <i class="fab fa-pinterest-p"></i>
-                    </div>
-                    <div class="footer__contact">
-                      <p>5 Fitzgerald Street, Harold's Cross,</p>
-                      <p>Dublin 6, D08X65 </p>
-        </body>
-      </html>
-  
+        </div>
+        <div class="col-12 col-3-md">
+          <div class="footer__list">
+            <a href="#about" class="footer__link">About</a>
+            <a href="#lifestyle" class="footer__link">Lifestyle</a>
+            <a href="#contact" class="footer__link">Contact</a>
+          </div>
+        </div>
+        <div class="col-12 col-3-md">
+          <div class="footer__contact-wrapper">
+            <div class="footer__social-media">
+              <i class="fab fa-facebook-f"></i>
+              <i class="fab fa-twitter"></i>
+              <i class="fab fa-pinterest-p"></i>
+            </div>
+            <div class="footer__contact">
+              <p>5 Fitzgerald Street, Harold's Cross,</p>
+              <p>Dublin 6, D08X65 </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
+</body>
+
+</html>
