--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,6 @@
   <link rel="stylesheet" href="css/styles.css">
   <script src="https://kit.fontawesome.com/f45d831e1a.js" crossorigin="anonymous"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <link href="https://fonts.googleapis.com/css?family=Delius+Swash+Caps&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Rock+Salt&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Karla:400,400i,700,700i&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Prompt:400,400i,500,500i,700,700i&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/animated-icons/icons/stop/stop.json">
@@ -29,12 +27,11 @@
       </div>
 
       <div class="navbar__list">
-        <a href="#recipes" class="navbar__link">Recipes</a>
-        <a href="#blog" class="navbar__link">Blog</a>
-        <a href="#calculator" class="navbar__link">Calculator</a>
-        <a href="#contact" class="navbar__link">Contact</a>
-        <a href="#about" class="navbar__link">About</a>
+        <a href="recipes.html" class="navbar__link">Recipes</a>
         <a href="lifestyle.html" class="navbar__link">Lifestyle</a>
+        <a href="calculator.html" class="navbar__link">BMI Calculator</a>
+        <a href="about.html" class="navbar__link">About</a>
+        <a href="contact.html" class="navbar__link">Contact</a>
       </div>
     </div>
   </navbar>
@@ -188,16 +185,15 @@
         </div>
         <div class="col-12 col-3-md">
           <div class="footer__list">
-            <a href="#recipes" class="footer__link">Recipes</a>
-            <a href="#blog" class="footer__link">Blog</a>
-            <a href="#calculator" class="footer__link">Calculator</a>
+            <a href="recipes.html" class="footer__link">Recipes</a>
+            <a href="lifestyle.html" class="footer__link">Lifestyle</a>
+            <a href="calculator.html" class="footer__link">Calculator</a>
           </div>
         </div>
         <div class="col-12 col-3-md">
           <div class="footer__list">
-            <a href="#about" class="footer__link">About</a>
-            <a href="#lifestyle" class="footer__link">Lifestyle</a>
-            <a href="#contact" class="footer__link">Contact</a>
+            <a href="about.html" class="footer__link">About</a>
+            <a href="contact.html" class="footer__link">Contact</a>
           </div>
         </div>
         <div class="col-12 col-3-md">
