--- a/src/leaneating.html
+++ b/src/leaneating.html
@@ -7,8 +7,6 @@
   <link rel="stylesheet" href="css/styles.css">
   <script src="https://kit.fontawesome.com/f45d831e1a.js" crossorigin="anonymous"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <link href="https://fonts.googleapis.com/css?family=Delius+Swash+Caps&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Rock+Salt&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Karla:400,400i,700,700i&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Prompt:400,400i,500,500i,700,700i&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/animated-icons/icons/stop/stop.json">
@@ -37,21 +35,23 @@
       </div>
     </div>
   </navbar>
-  <section>
+
+  <section class="container leaneating">
     <br>
     <br>
     <br>
-    <div class="LeanEating">
-      <h1>8 New Rules of Lean Eating</h1>
-      <div class="intro">
+    <div>
+      <h1 class="leaneating__title">8 New Rules of Lean Eating</h1>
+
+      <div class="textBox">
         <p>You'd like your eating plan to work for you - to get you the results that you want without loads of complicated steps.
           The good news is that lean eating does not mean complicated eating...it just means eating smart!</p>
       </div>
-      <br>
-      <div class="rule_1">
-        <h4>1. Eat the RIGHT Type of Carbs</h4>
-        <img src="Images/fruitveg.jpg" alt="green fruit and veg" width="400" height="480" class="rule_1_img">
-        <p>
+
+      <div class="paragraph clearfix">
+        <h4 class="paragraph__title">1. Eat the RIGHT Type of Carbs</h4>
+        <img src="Images/fruitveg.jpg" alt="green fruit and veg" class="paragraph__img paragraph__img--right">
+        <div class="paragraph__text paragraph__text--left">
           There is a confusion around which carbs have a place in a lean diet and which carbs will only make you gain weight.
           The success of your eating plan depends a lot on which of these carbs you regularly include in your diet:
           <ol>
@@ -64,8 +64,9 @@
           </ol>
           The top 3 ranked carbs are where 90% of the carbs in your diet should be coming from...in order to get that lean physique that you want.
           Immediately cut out the bottom 2 (refined grains and foods with added sugar) and on occasion include a limited amount of Whole Grains and Starches.
+        </div>
       </div>
-      <br>
+
       <div class="rule_2">
         <img src="Images/fitnesstracker.jpg" alt="smartwatch" width="400" height="250" class="trackimage">
         <h4>2. Track What You Eat</h4>
@@ -81,6 +82,7 @@
           snack if your meals are going to be more than 4 hours apart.
         </p>
       </div>
+
       <div class="rule_4">
         <img src="Images/baddiet.jpg" alt="poor diet" width="400" height="240" class="plateimage">
         <h4>4. Never Restrict Calories to the Extreme</h4>
@@ -91,8 +93,8 @@
           The key to being lean for life is to eat in a way that you can sustain forever. Eat whole foods. Eat a moderate amount of the RIGHT calories. Every day, ongoing, forever.
         </p>
       </div>
+
       <div class="rule_5">
-        <br>
         <img src="Images/veggiesfirst.jpg" alt="vegetables" width="480" height="320" class="veggiesfirst">
         <h4>5. Eat Veggies First</h4>
         <p>This may go against all of your instincts, but hear this one out. When you sit down to a meal first eat all of the veggies and salad, before moving on to the main meal.
@@ -100,8 +102,8 @@
           calories at each meal, which will add up in a big way.
         </p>
       </div>
+
       <div class="rule_6">
-        <br>
         <img src="Images/proteinimage.jpg" alt="protein" width="350" height="280" class="proteinimage">
         <h4>6. Include Protein at Every Meal</h4>
         <p>Each of your meals should be built around a healthy serving of protein. This protein could be meat (chicken breast, fish fillet, roasted turkey, lean beef etc..), or a meat substitute
@@ -112,24 +114,27 @@
           </ol>
         </p>
       </div>
+
       <div class="rule_7">
-        <br>
         <img src="Images/nofizzies.jpg" alt="Fizzy Drink" width="250" height="220" class="nofizzies">
         <h4>7. Ban Liquid Calories</h4>
         <p>Liquid calories have no place in a lean eating plan. No place at all. Anytime that you are drinking calories, it's safe to assume that you're adding inches to your waistline.
           Put down the beer, just say no to the blended coffee drink, and forget about fizzy drinks. Put down the beer, just say no to the blended coffee drink, and forget about fizzy drinks.
         </p>
       </div>
+
       <div class="rule_8">
-        <br>
         <h4>8. Avoid Prepackaged Foods</h4>
         <p>Prepackaged foods and snacks have no place in a lean eating plan. These processed foods contain numerous fattening ingredients such as refined sugar, sodium,
           grains, fillers and other artificial ingredients. If you are currently eating packaged foods on a daily basis, then cutting these items out will quickly translate into pounds lost. </p>
       </div>
+
       <div class="author">
         <p>Alex Ardelean - PT</p>
       </div>
+
   </section>
+
   <footer class="footer">
     <div class="container footer__container">
       <div class="row">
