--- a/src/mythsbusted.html
+++ b/src/mythsbusted.html
@@ -37,7 +37,7 @@
     </div>
   </navbar>
 
-  <section>
+  <section class="container blog">
     <br>
     <br>
     <br>
@@ -57,7 +57,6 @@
       <a class="next" onclick="plusSlides(1)">&#10095;</a>
     </div>
 
-    <br>
     <div style="text-align:center">
       <span class="dot" onclick="currentSlide(1)"></span>
       <span class="dot" onclick="currentSlide(2)"></span>
@@ -100,7 +99,7 @@
     </div>
 
     <br>
-    <div class="author">
+    <div class="blog__author">
       <p>Alex Ardelean - PT</p>
     </div>
   </section>
