--- a/src/staples.html
+++ b/src/staples.html
@@ -49,10 +49,10 @@
           vegan or keto-warrior, there are certain staples that are must-haves in the kitchen to make it all that little bit easier: </p>
       </div>
 
-      <div class="pantry clearfix">
-        <h3 class="pantry__title">Pantry Staples</h3>
-        <img class="pantry__img pantry__img--right" src="images\pantry.jpg" alt="Pantry" class="pantryimage">
-        <ul class="pantry__text pantry__text--left">
+      <div class="paragraph clearfix">
+        <h3 class="paragraph__title">Pantry Staples</h3>
+        <img class="paragraph__img paragraph__img--right" src="images\pantry.jpg" alt="Pantry" class="paragraph__image">
+        <ul class="paragraph__text paragraph__text--left">
           <li>Oil - I generally like Olive Oil or Sunflower Oil!</li>
           <li>Spices - Everyone should have at least the following:</li>
           <ol>
@@ -78,20 +78,20 @@
         </ul>
       </div>
 
-      <div class="pantry clearfix">
-        <h3 class="pantry__title">Fresh Produce</h3>
-        <img class="pantry__img pantry__img--left" src="images\garlic.jpg" alt="Garlic" class="garlicimage">
-        <ul class="pantry__text pantry__text--right">
+      <div class="paragraph clearfix">
+        <h3 class="paragraph__title">Fresh Produce</h3>
+        <img class="paragraph__img paragraph__img--left" src="images\garlic.jpg" alt="Garlic" class="garlicimage">
+        <ul class="paragraph__text paragraph__text--right">
           <li>Of course at the top of this list is: <strong>Garlic!</strong></li>
           <li>Onions (to cook with your garlic)</li>
           <li>Fresh veggies - I like carrots and peppers, but to each their own!</li>
         </ul>
       </div>
 
-      <div class="pantry clearfix">
-        <h3 class="pantry__title">Gadgets</h3>
-        <img class="pantry__img pantry__img--right" src="images\kitchenware.jpg" alt="kitchenware" class="kitchenware">
-        <ul class="pantry__text pantry__text--left">
+      <div class="paragraph clearfix">
+        <h3 class="paragraph__title">Gadgets</h3>
+        <img class="paragraph__img paragraph__img--right" src="images\kitchenware.jpg" alt="kitchenware" class="kitchenware">
+        <ul class="paragraph__text paragraph__text--left">
           <li>First and foremost: <strong>A non-stick pan!</strong></li>
           <li>Heat resistant spatula</li>
           <li>Measuring cups and spoons</li>
