--- a/src/leaneating.html
+++ b/src/leaneating.html
@@ -36,12 +36,12 @@
     </div>
   </navbar>
 
-  <section class="container leaneating">
+  <section class="container blog">
     <br>
     <br>
     <br>
     <div>
-      <h1 class="leaneating__title">8 New Rules of Lean Eating</h1>
+      <h1 class="blog__title">8 New Rules of Lean Eating</h1>
 
       <div class="textBox">
         <p>You'd like your eating plan to work for you - to get you the results that you want without loads of complicated steps.
@@ -67,69 +67,74 @@
         </div>
       </div>
 
-      <div class="rule_2">
-        <img src="Images/fitnesstracker.jpg" alt="smartwatch" width="400" height="250" class="trackimage">
-        <h4>2. Track What You Eat</h4>
-        <p>The only way to improve upon your diet is to actually know what you're currently eating. Keep a food journal, or download a free food tracker app(my fitness pal),
+      <div class="paragraph clearfix">
+        <h4 class="paragraph__title">2. Track What You Eat</h4>
+        <img src="Images/fitnesstracker.jpg" alt="smartwatch" class="paragraph__img paragraph__img--left">
+        <div class="paragraph__text paragraph__text--right">The only way to improve upon your diet is to actually know what you're currently eating. Keep a food journal, or download a free food tracker app(my fitness pal),
           and track the calories that you have over the course of a week. This will give you a broad look at where your low quality calories are coming from (high sugar, empty calories).
           Your first step will be to eliminate these fattening calories and to start replacing empty calories with nutrient-filled whole foods.
-        </p>
+        </div>
       </div>
-      <div class="rule_3">
-        <h4>3. Space Meals Apart</h4>
-        <p>Much has been said over the past number of decades about the importance of eating small frequent meals throughout the day. This is old, outdated science.
+
+      <div class="paragraph clearfix">
+        <h4 class="paragraph__title paragraph__title--left">3. Space Meals Apart</h4>
+        <p class="paragraph__text paragraph__text--fullWidth">Much has been said over the past number of decades about the importance of eating small frequent meals throughout the day. This is old, outdated science.
           New research has proven that there's more harm than good to eating more frequently than every 4 hours. Stick with 3 meals each day, and fill in a protein-based
           snack if your meals are going to be more than 4 hours apart.
         </p>
       </div>
 
-      <div class="rule_4">
-        <img src="Images/baddiet.jpg" alt="poor diet" width="400" height="240" class="plateimage">
-        <h4>4. Never Restrict Calories to the Extreme</h4>
-        <p>There's a certain trend going on in temporarily restricting calories to the extreme. The idea that one can drop a down a size or two in just as many weeks is quite tempting.
+      <div class="paragraph clearfix">
+        <h4 class="paragraph__title">4. Never Restrict Calories to the Extreme</h4>
+        <img src="Images/baddiet.jpg" alt="poor diet" class="paragraph__img paragraph__img--right">
+        <div class="paragraph__text paragraph__text--left">
+          There's a certain trend going on in temporarily restricting calories to the extreme. The idea that one can drop a down a size or two in just as many weeks is quite tempting.
           I hate to be the one to burst your overambitious bubble, but extreme calorie restriction NEVER WORKS. It's terrible for your body and it is not something that is sustainable
           (namely because you'd starve to death) all this will do is make your body completely fall off and binge.
           <br>
           The key to being lean for life is to eat in a way that you can sustain forever. Eat whole foods. Eat a moderate amount of the RIGHT calories. Every day, ongoing, forever.
-        </p>
+        </div>
       </div>
 
-      <div class="rule_5">
-        <img src="Images/veggiesfirst.jpg" alt="vegetables" width="480" height="320" class="veggiesfirst">
-        <h4>5. Eat Veggies First</h4>
-        <p>This may go against all of your instincts, but hear this one out. When you sit down to a meal first eat all of the veggies and salad, before moving on to the main meal.
+      <div class="paragraph clearfix">
+        <h4 class="paragraph__title">5. Eat Veggies First</h4>
+        <img src="Images/veggiesfirst.jpg" alt="vegetables" class="paragraph__img paragraph__img--left">
+        <div class="paragraph__text paragraph__text--right">
+          This may go against all of your instincts, but hear this one out. When you sit down to a meal first eat all of the veggies and salad, before moving on to the main meal.
           This simple strategy helps to fill you up with lower calorie foods first, before moving on to the higher calorie items. By making this a habit you'll naturally and effortlessly consume fewer
           calories at each meal, which will add up in a big way.
-        </p>
+        </div>
       </div>
 
-      <div class="rule_6">
-        <img src="Images/proteinimage.jpg" alt="protein" width="350" height="280" class="proteinimage">
-        <h4>6. Include Protein at Every Meal</h4>
-        <p>Each of your meals should be built around a healthy serving of protein. This protein could be meat (chicken breast, fish fillet, roasted turkey, lean beef etc..), or a meat substitute
+      <div class="paragraph clearfix">
+        <h4 class="paragraph__title">6. Include Protein at Every Meal</h4>
+        <img src="Images/proteinimage.jpg" alt="protein" class="paragraph__img paragraph__img--right">
+        <div class="paragraph__text paragraph__text--left">
+        Each of your meals should be built around a healthy serving of protein. This protein could be meat (chicken breast, fish fillet, roasted turkey, lean beef etc..), or a meat substitute
           (tofu, quorn, jackfruit, etc..) eggs, or protein powder. Having protein as the focus point of your meal is important for two reasons:
           <ol>
             <li>You're fueling up in a way that builds muscles rather than stores fat</li>
             <li>By default, you're avoiding high calorie main dishes, which is what really causes most weight gain</li>
           </ol>
-        </p>
+        </div>
       </div>
 
-      <div class="rule_7">
-        <img src="Images/nofizzies.jpg" alt="Fizzy Drink" width="250" height="220" class="nofizzies">
-        <h4>7. Ban Liquid Calories</h4>
-        <p>Liquid calories have no place in a lean eating plan. No place at all. Anytime that you are drinking calories, it's safe to assume that you're adding inches to your waistline.
+      <div class="paragraph clearfix">
+        <h4 class="paragraph__title">7. Ban Liquid Calories</h4>
+        <img src="Images/nofizzies.jpg" alt="Fizzy Drink" class="paragraph__img paragraph__img--left">
+        <div class="paragraph__text paragraph__text--right">
+        Liquid calories have no place in a lean eating plan. No place at all. Anytime that you are drinking calories, it's safe to assume that you're adding inches to your waistline.
           Put down the beer, just say no to the blended coffee drink, and forget about fizzy drinks. Put down the beer, just say no to the blended coffee drink, and forget about fizzy drinks.
-        </p>
+        </div>
       </div>
 
-      <div class="rule_8">
-        <h4>8. Avoid Prepackaged Foods</h4>
-        <p>Prepackaged foods and snacks have no place in a lean eating plan. These processed foods contain numerous fattening ingredients such as refined sugar, sodium,
-          grains, fillers and other artificial ingredients. If you are currently eating packaged foods on a daily basis, then cutting these items out will quickly translate into pounds lost. </p>
+      <div class="paragraph">
+        <h4 class="paragraph__title paragraph__title--left">8. Avoid Prepackaged Foods</h4>
+        <div class="paragraph__text paragraph__text--fullWidth">Prepackaged foods and snacks have no place in a lean eating plan. These processed foods contain numerous fattening ingredients such as refined sugar, sodium,
+          grains, fillers and other artificial ingredients. If you are currently eating packaged foods on a daily basis, then cutting these items out will quickly translate into pounds lost. </div>
       </div>
 
-      <div class="author">
+      <div class="blog__author">
         <p>Alex Ardelean - PT</p>
       </div>
 
