resize images, refactor code

--- a/src/beachbod.html
+++ b/src/beachbod.html
@@ -35,11 +35,10 @@
       </div>
     </div>
   </navbar>
+  <br><br><br><br>
 
-  <section class="blog">
-    <br>
-    <br>
-    <br>
+
+  <section class="blog container">
     <div class="beachBod-intro">
       <div style="background-image: url('/src/Images/gym.jpg);">
         <h1 class="beachBod-intro__title">Beach Bod Basics</h1>
