--- a/src/staples.html
+++ b/src/staples.html
@@ -35,80 +35,78 @@
       </div>
     </div>
   </navbar>
-  <br><br><br>
+  <br><br><br><br>
 
-  <section class="staples">
-    <div class="container">
 
-      <div class="textBox">
-        <h1 class="textBox__title">Kitchen Staples</h1>
-        <p>Right now, there is more awareness than ever before around health and fitness. People have become more educated on the dangers of unhealthy eating and poor fitness levels.
-          With that, people have taken action to take better care of themselves. <br>
-          A huge part of this is understanding the foods you need to nourish your body to help it function to its full capacity.
-          Everyone is so different, so there are endless possibilities out there for meals and snacks. That being said, whether you're a veggie,
-          vegan or keto-warrior, there are certain staples that are must-haves in the kitchen to make it all that little bit easier: </p>
-      </div>
+  <section class="staples blog container">
+    <div class="textBox">
+      <h1 class="textBox__title">Kitchen Staples</h1>
+      <p>Right now, there is more awareness than ever before around health and fitness. People have become more educated on the dangers of unhealthy eating and poor fitness levels.
+        With that, people have taken action to take better care of themselves. <br>
+        A huge part of this is understanding the foods you need to nourish your body to help it function to its full capacity.
+        Everyone is so different, so there are endless possibilities out there for meals and snacks. That being said, whether you're a veggie,
+        vegan or keto-warrior, there are certain staples that are must-haves in the kitchen to make it all that little bit easier: </p>
+    </div>
 
-      <div class="paragraph clearfix">
-        <h3 class="paragraph__title">Pantry Staples</h3>
-        <img class="paragraph__img paragraph__img--right" src="images\pantry.jpg" alt="Pantry" class="paragraph__image">
-        <ul class="paragraph__text paragraph__text--left">
-          <li>Oil - I generally like Olive Oil or Sunflower Oil!</li>
-          <li>Spices - Everyone should have at least the following:</li>
-          <ol>
-            <li>Salt and Pepper of course!</li>
-            <li>Chilli Powder</li>
-            <li>Tumeric</li>
-            <li>Paprika</li>
-            <li>Cajun Spice</li>
-            <li>Chilli Flakes</li>
-            <li>Curry Powder</li>
-            <li>Oregano</li>
-            <li>Parsley</li>
-            <li>Rosemary</li>
-            <li>Thyme</li>
-          </ol>
-          <li>Rice</li>
-          <li>Pasta</li>
-          <li>Tinned Tomatoes</li>
-          <li>Pasata</li>
-          <li>Tomato Puree</li>
-          <li>Soy Sauce</li>
-          <li>Stock (chicken or vegetable)</li>
-        </ul>
-      </div>
+    <div class="paragraph clearfix">
+      <h3 class="paragraph__title">Pantry Staples</h3>
+      <img class="paragraph__img paragraph__img--right" src="images\pantry.jpg" alt="Pantry" class="paragraph__image">
+      <ul class="paragraph__text paragraph__text--left">
+        <li>Oil - I generally like Olive Oil or Sunflower Oil!</li>
+        <li>Spices - Everyone should have at least the following:</li>
+        <ol>
+          <li>Salt and Pepper of course!</li>
+          <li>Chilli Powder</li>
+          <li>Tumeric</li>
+          <li>Paprika</li>
+          <li>Cajun Spice</li>
+          <li>Chilli Flakes</li>
+          <li>Curry Powder</li>
+          <li>Oregano</li>
+          <li>Parsley</li>
+          <li>Rosemary</li>
+          <li>Thyme</li>
+        </ol>
+        <li>Rice</li>
+        <li>Pasta</li>
+        <li>Tinned Tomatoes</li>
+        <li>Pasata</li>
+        <li>Tomato Puree</li>
+        <li>Soy Sauce</li>
+        <li>Stock (chicken or vegetable)</li>
+      </ul>
+    </div>
 
-      <div class="paragraph clearfix">
-        <h3 class="paragraph__title">Fresh Produce</h3>
-        <img class="paragraph__img paragraph__img--left" src="images\garlic.jpg" alt="Garlic" class="garlicimage">
-        <ul class="paragraph__text paragraph__text--right">
-          <li>Of course at the top of this list is: <strong>Garlic!</strong></li>
-          <li>Onions (to cook with your garlic)</li>
-          <li>Fresh veggies - I like carrots and peppers, but to each their own!</li>
-        </ul>
-      </div>
+    <div class="paragraph clearfix">
+      <h3 class="paragraph__title">Fresh Produce</h3>
+      <img class="paragraph__img paragraph__img--left" src="images\garlic.jpg" alt="Garlic" class="garlicimage">
+      <ul class="paragraph__text paragraph__text--right">
+        <li>Of course at the top of this list is: <strong>Garlic!</strong></li>
+        <li>Onions (to cook with your garlic)</li>
+        <li>Fresh veggies - I like carrots and peppers, but to each their own!</li>
+      </ul>
+    </div>
 
-      <div class="paragraph clearfix">
-        <h3 class="paragraph__title">Gadgets</h3>
-        <img class="paragraph__img paragraph__img--right" src="images\kitchenware.jpg" alt="kitchenware" class="kitchenware">
-        <ul class="paragraph__text paragraph__text--left">
-          <li>First and foremost: <strong>A non-stick pan!</strong></li>
-          <li>Heat resistant spatula</li>
-          <li>Measuring cups and spoons</li>
-          <li>Good quality knives</li>
-          <li>Chopping board</li>
-          <li>Tin opener</li>
-          <li>Garlic press</li>
-          <li>Cheese grater</li>
-          <li>Vegetable Peeler</li>
-          <li>Weighing scales</li>
-          <li>A great caserole dish</li>
-        </ul>
-      </div>
+    <div class="paragraph clearfix">
+      <h3 class="paragraph__title">Gadgets</h3>
+      <img class="paragraph__img paragraph__img--right" src="images\kitchenware.jpg" alt="kitchenware" class="kitchenware">
+      <ul class="paragraph__text paragraph__text--left">
+        <li>First and foremost: <strong>A non-stick pan!</strong></li>
+        <li>Heat resistant spatula</li>
+        <li>Measuring cups and spoons</li>
+        <li>Good quality knives</li>
+        <li>Chopping board</li>
+        <li>Tin opener</li>
+        <li>Garlic press</li>
+        <li>Cheese grater</li>
+        <li>Vegetable Peeler</li>
+        <li>Weighing scales</li>
+        <li>A great caserole dish</li>
+      </ul>
+    </div>
 
-      <div class="staples__conclusion">
-        <h4>And there you have it folks, now that you've kitted out your kitchen, you're ready to get yourself cookin!</h4>
-      </div>
+    <div class="staples__conclusion">
+      <h4>And there you have it folks, now that you've kitted out your kitchen, you're ready to get yourself cookin!</h4>
     </div>
   </section>
 
