--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
   <navbar>
     <div class="js-navbar navbar">
       <div class="navbar__header">
-        <a href="#home" class="navbar__logo">LOGO</a>
+        <a href="/" class="navbar__logo">LOGO</a>
         <span href="javascript:void(0);" class="navbar__button" onclick="myFunction()">
           <i class="fa fa-bars"></i>
         </span>
