--- a/src/mythsbusted.html
+++ b/src/mythsbusted.html
@@ -19,19 +19,19 @@
   <navbar>
     <div class="js-navbar navbar">
       <div class="navbar__header">
-        <a href="#home" class="navbar__logo">LOGO</a>
+        <a href="/" class="navbar__logo">LOGO</a>
         <span href="javascript:void(0);" class="navbar__button" onclick="myFunction()">
           <i class="fa fa-bars"></i>
         </span>
       </div>
 
       <div class="navbar__list">
-        <a href="#recipes" class="navbar__link">Recipes</a>
-        <a href="#blog" class="navbar__link">Blog</a>
-        <a href="#calculator" class="navbar__link">Calculator</a>
-        <a href="#contact" class="navbar__link">Contact</a>
-        <a href="#about" class="navbar__link">About</a>
-        <a href="#lifestyle" class="navbar__link">Lifestyle</a>
+        <a href="index.html" class="navbar__link">Home</a>
+        <a href="lifestyle.html" class="navbar__link">Lifestyle</a>
+        <a href="recipes.html" class="navbar__link">Recipes</a>
+        <a href="calculator.html" class="navbar__link">Calculator</a>
+        <a href="about.html" class="navbar__link">About</a>
+        <a href="contact.html" class="navbar__link">Contact</a>
       </div>
     </div>
   </navbar>
